# pizerarr

./: Cargo.toml  LICENSE  README.md  setup-pi.sh
.github/workflows/: release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tv/pi/pizerarr/: MainActivity.java
android/app/src/main/res/values/: styles.xml
docs/: index.html
src/: library.rs  main.rs  routes.rs  search.rs  subs.rs  tmdb.rs  torrent.rs  transcode.rs
static/: index.html
