[package]
name = "pizerarr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
flate2 = "1"
axum = "0.8"
librqbit = "8"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { version = "8", features = ["axum"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
libc = "0.2"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
